--- a/user.css
+++ b/user.css
@@ -26,3 +26,10 @@
 	margin-top: 10px;
 }
 //////////
+
+
+/* css by ceylon360 */
+
+/* small margine for product grid */
+
+.lowMargin{padding-left:5px; padding-right:5px;}
