--- a/custom.css
+++ b/custom.css
@@ -591,7 +591,7 @@ p.lead del {
   margin-bottom: 3px;
 }
 .cat_nav ul.cat_csub.cat_csub00 li {
-  padding: 16px 0 16px 15px;
+  padding: 4px 0 4px 3px;
 }
 .cat_nav ul li:hover{
 	border-left: 4px solid #2ecc71;
@@ -600,7 +600,7 @@ p.lead del {
 	color:#333;
 	background: #F9F9F9;
 }
-.nav>li>a {
+.cat_nav>li>a {
     position: relative;
     display: block;
     padding: 2px 3px;
