--- a/custom.css
+++ b/custom.css
@@ -754,3 +754,14 @@ li.notice.notice-success a {
 .header_lv H1 {
     color: #fff;
 }
+.row-centered {
+    text-align:center;
+}
+.col-centered {
+    display:inline-block;
+    float:none;
+    /* reset the text-align */
+    text-align:left;
+    /* inline-block space fix */
+    margin-right:-4px;
+}
