--- a/user.css
+++ b/user.css
@@ -95,10 +95,9 @@
 .floatingContainer:hover .subActionButton + .subActionButton + .subActionButton {
   transition: opacity 0.4s;
 }
-
 .actionButton {
-  height: 3em;
-  width: 3em;
+  height: 4em;
+  width: 4em;
   background-color: #D32F2F;
   position: relative;
   border-radius: 50%;
@@ -131,10 +130,10 @@
   color: #FFF;
   position: absolute;
   margin-top: .3em;
-  margin-left: .7em;
+  margin-left: .6em;
   opacity: 1;
-  font-size: 1.4em;
-  font-weight: 400;
+  font-size: 2em;
+  font-weight: 200;
   font-family: 'FontAwesome';
   transform: rotate3d(0, 0, 1, -180deg);
   transition: content 0.4s, transform 0.4s, opacity 0.2s;
@@ -144,9 +143,9 @@
   color: #FFF;
   position: absolute;
   margin-top: .3em;
-  margin-left: .7em;
-  font-size: 1.4em;
-  font-weight: 400;
+  margin-left: .6em;
+  font-size: 2em;
+  font-weight: 200;
   opacity: 0;
   font-family: 'FontAwesome';
   transform: rotate3d(0, 0, 1, -180deg);
@@ -165,9 +164,9 @@
 }
 
 .subActionButton {
-  background-color: #3F51B5;
-  height: 2em;
-  width: 2em;
+  background-color: #5CB85C;
+  height: 3em;
+  width: 3em;
   border-radius: 50%;
   margin-bottom: .6em;
   margin-left: .5em;
@@ -177,8 +176,8 @@
 }
 .subActionButton .floatingText {
   position: absolute;
-  top: -.6em;
-  right: 2.5em;
+  top: 0.8em;
+  right: 3.8em;
   min-width: 10em;
   font-family: 'Roboto';
   color: #FFF;
@@ -199,8 +198,8 @@
 }
 .subActionButton:before {
   margin-top: .4em;
-  margin-left: .45em;
-  font-size: 1.2em;
+  margin-left: .9em;
+  font-size: 1.5em;
   font-family: 'FontAwesome';
   position: absolute;
   color: #FFF;
@@ -208,17 +207,17 @@
 .subActionButton.person:before {
   content: '\f0c0';
   margin-top: .3em;
-  margin-left: .3em;
+  margin-left: .5em;
 }
 .subActionButton.mapMarker:before {
   content: '\f041';
-  margin-top: .4em;
-  margin-left: .55em;
+  margin-top: .35em;
+  margin-left: .7em;
 }
 .subActionButton.note:before {
   content: '\f044';
   margin-top: .4em;
-  margin-left: .45em;
+  margin-left: .6em;
 }
 .subActionButton:hover {
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.14), 0 8px 16px rgba(0, 0, 0, 0.28);
