--- a/custom.css
+++ b/custom.css
@@ -834,6 +834,7 @@ float:right;
 }
 .bg-gray{
     background-color: #FDFDFD;
+	border: 1px solid #F3F3F3;
 }
 
 .cartbx_total{
@@ -849,7 +850,8 @@ float:right;
 }
 
 .bg-white{
-	background-color:#fff
+	background-color:#fff;
+	
 }
 .bg-gray2{
 	background-color:#F5F5F5
