--- a/user.css
+++ b/user.css
@@ -337,3 +337,26 @@ a {
 	margin:0px;
 }
 
+/* form feild modifications */
+
+.form-control1 {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border-bottom: 3px solid #ccc;
+    border: 0px solid #ccc;
+    border-radius: 1px;
+    border-bottom: 3px solid #333;
+}
+
+.form-control1:focus {
+    border-color: #FFC107;
+    outline: 0;
+	
+}
