--- a/user.css
+++ b/user.css
@@ -313,18 +313,18 @@ a {
     
 }
 .card-blue{
-	border-top: 4px solid #3AA1F4;
+	border-top: 3px solid #3AA1F4;
 	
 }	
 .card-green{
-	border-top: 4px solid #8BC34A;
+	border-top: 3px solid #8BC34A;
 }	
 
 .card-yellow{
-	border-top: 4px solid #FFC107;
+	border-top: 3px solid #FFC107;
 }
 .card-gray {
-    border-top: 4px solid #9E9E9E;
+    border-top: 3px solid #9E9E9E;
 }
 .mdl {
     color: #888;
@@ -359,4 +359,84 @@ a {
     border-color: #FFC107;
     outline: 0;
 	
+}
+
+/* top navigation */
+.navbar-inverse .navbar-nav>li>a {
+    color: #565656;
+}
+
+@media (min-width: 768px)
+.navbar-nav>li>a {
+    padding-top: 6px;
+    padding-bottom: 5px;
+}
+
+.navbar-nav>li>a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 10px;
+}
+.navbar-nav>li>a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 10px;
+    font-size: 12px;
+}
+
+.navbar-inverse {
+    background-color: #FFF;
+    border-color: #E0E0E0;
+}
+.navbar {
+    position: relative;
+    min-height: 30px;
+    margin-bottom: 20px;
+    border: 1px solid rgb(224, 224, 224);
+}
+.navbar-no-margin {
+    margin-bottom: 5px !important; 
+}
+
+.searchbox-margin {
+    margin-top: 4%;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+    -webkit-box-shadow: inset 0 0px 0px rgba(0,0,0,.075);
+    box-shadow: inset 0 0px 0px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.form-control:focus {
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 0px 0px rgba(0,0,0,.075),0 0 0px rgba(102,175,233,.6);
+    box-shadow: inset 0 0px 0px rgba(0,0,0,.075),0 0 0px rgba(102,175,233,.6);
+}
+.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover {
+    color: #3379B7;
+    background-color: transparent;
+	-webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.footer-extra {
+    background: #2b3340;
+    color: silver;
+    line-height: 3;
 }
