--- a/user.css
+++ b/user.css
@@ -327,6 +327,10 @@ a {
     color: #888;
     font-size: 16px;
 }
+.md2 {
+    color: #888;
+    font-size: 13px;
+}
 .n-padding{
 	padding:0px;
 }
